--- a/index.html
+++ b/index.html
@@ -5,86 +5,91 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>VolunteerReports</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/vuetify@3.1.5/dist/vuetify.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 
 <body class="py-4">
     <main id="app">
-        <template v-if="authorization.login">
-            <div class="container">
-                <div class="row row-cols-3 mb-2">
-                    <div class="col text-end month"><button type="button" class="btn btn-light"
-                            v-on:click="onClickBack"><i class="bi bi-chevron-left"></i></button></div>
-                    <div class="col month text-nowrap">{{ year }}年{{ monthIndex + 1 }}月</div>
-                    <div class="col text-start month"><button type="button" class="btn btn-light"
-                            v-on:click="onClickNext"><i class="bi bi-chevron-right"></i></button></div>
-                </div>
-                <div class="row row-cols-1 mb-2">
-                    <div class="col">
-                        <my-calender v-bind:year="year" v-bind:monthindex="monthIndex" v-bind:regist="load"
-                            v-on:from-select="showDetail"></my-calender>
+        <v-app>
+            <template v-if="authorization.login">
+                <div class="container">
+                    <div class="row row-cols-3 mb-2">
+                        <div class="col text-end month"><button type="button" class="btn btn-light"
+                                v-on:click="onClickBack"><i class="bi bi-chevron-left"></i></button></div>
+                        <div class="col month text-nowrap">{{ year }}年{{ monthIndex + 1 }}月</div>
+                        <div class="col text-start month"><button type="button" class="btn btn-light"
+                                v-on:click="onClickNext"><i class="bi bi-chevron-right"></i></button></div>
                     </div>
-                </div>
-                <template v-if="detail.date != '0/0/0'">
                     <div class="row row-cols-1 mb-2">
-                        <div class="col detail">{{ detail.date }}</div>
+                        <div class="col">
+                            <my-calender v-bind:year="year" v-bind:monthindex="monthIndex" v-bind:regist="load"
+                                v-on:from-select="showDetail"></my-calender>
+                        </div>
                     </div>
-                    <div class="row row-cols-2 mb-2 reports border">
-                        <div class="col py-1 label">配布数</div>
-                        <div class="col py-1 border-bottom">{{ detail.distribute }}</div>
-                        <div class="col py-1 label">ビデオ再生</div>
-                        <div class="col py-1 border-bottom">{{ detail.video }}</div>
-                        <div class="col py-1 label">時間</div>
-                        <div class="col py-1 border-bottom">{{ timeString }}</div>
-                        <div class="col py-1 label">再訪問</div>
-                        <div class="col py-1 border-bottom">{{ detail.revisit }}</div>
-                        <div class="col py-1 label">研究</div>
-                        <div class="col">{{ detail.study }}</div>
-                    </div>
-                </template>
-            </div>
-            <modal-dialog title="新規報告" v-bind:visible="add_dlg" v-on:from-close="add_dlg = false"
-                v-on:from-send="onSendDialog"></modal-dialog>
-            <modal-dialog title="編集" v-bind:visible="edi_dlg" v-bind:default="detail" v-on:from-close="edi_dlg = false"
-                v-on:from-send="onPutDialog"></modal-dialog>
-            <modal-message title="削除" message="報告を削除します。" v-bind:visible="del_dlg" v-on:from-close="del_dlg = false"
-                v-on:from-send="onDelDialog"></modal-message>
-            <nav class="navbar fixed-bottom navbar-light bg-light">
-                <div class="container-fluid justify-content-center">
-                    <button type="button" class="btn btn-outline-primary mx-3" v-bind:disabled="!commands[0]" v-on:click="add_dlg = true">
-                        <i class="bi bi-plus-circle"></i> 新規
-                    </button>
-                    <button type="button" class="btn btn-outline-success mx-3" v-bind:disabled="!commands[1]" v-on:click="edi_dlg = true">
-                        <i class="bi bi-pen"></i> 編集
-                    </button>
-                    <button type="button" class="btn btn-outline-danger mx-3" v-bind:disabled="!commands[2]" v-on:click="del_dlg = true">
-                        <i class="bi bi-x-circle"></i> 削除
-                    </button>
+                    <template v-if="detail.date != '0/0/0'">
+                        <div class="row row-cols-1 mb-2">
+                            <div class="col detail">{{ detail.date }}</div>
+                        </div>
+                        <div class="row row-cols-2 mb-2 reports border">
+                            <div class="col py-1 label">配布数</div>
+                            <div class="col py-1 border-bottom">{{ detail.distribute }}</div>
+                            <div class="col py-1 label">ビデオ再生</div>
+                            <div class="col py-1 border-bottom">{{ detail.video }}</div>
+                            <div class="col py-1 label">時間</div>
+                            <div class="col py-1 border-bottom">{{ timeString }}</div>
+                            <div class="col py-1 label">再訪問</div>
+                            <div class="col py-1 border-bottom">{{ detail.revisit }}</div>
+                            <div class="col py-1 label">研究</div>
+                            <div class="col">{{ detail.study }}</div>
+                        </div>
+                    </template>
                 </div>
-            </nav>
-        </template>
-        <template v-else>
-            <div class="container">
-                <form class="form-login border shadow rounded-3">
-                    <h1 class="h3 text-center fw-normal mb-4">ログインしてください</h1>
-                    <label for="id_input" class="form-label">ユーザー名</label>
-                    <input type="text" class="form-control mb-3" id="id_input" v-model.lazy="authorization.id">
-                    <label for="password_input" class="form-label">パスワード</label>
-                    <input type="password" class="form-control mb-3" id="password_input"
-                        v-model.lazy="authorization.password">
-                    <button type="button" class="btn btn-lg btn-primary w-100 mt-3" v-on:click="onClickLogin">ログイン</button>
-                </form>
-            </div>
-        </template>
+                <modal-dialog title="新規報告" v-bind:visible="add_dlg" v-on:from-close="add_dlg = false"
+                    v-on:from-send="onSendDialog"></modal-dialog>
+                <modal-dialog title="編集" v-bind:visible="edi_dlg" v-bind:default="detail" v-on:from-close="edi_dlg = false"
+                    v-on:from-send="onPutDialog"></modal-dialog>
+                <modal-message title="削除" message="報告を削除します。" v-bind:visible="del_dlg" v-on:from-close="del_dlg = false"
+                    v-on:from-send="onDelDialog"></modal-message>
+                <v-bottom-navigation>
+                    <v-btn value="add" v-bind:disabled="!commands[0]" v-on:click="add_dlg = true">
+                        <v-icon>mdi-plus-circle</v-icon>
+                        追加
+                    </v-btn>
+                    <v-btn value="edit" v-bind:disabled="!commands[1]" v-on:click="edi_dlg = true">
+                        <v-icon>mdi-pencil</v-icon>
+                        編集
+                    </v-btn>
+                    <v-btn value="delete" v-bind:disabled="!commands[2]" v-on:click="del_dlg = true">
+                        <v-icon>mdi-close-circle-outline</v-icon>
+                        削除
+                    </v-btn>
+                </v-bottom-navigation>
+            </template>
+            <template v-else>
+                <div class="container">
+                    <form class="form-login border shadow rounded-3">
+                        <h1 class="h3 text-center fw-normal mb-4">ログインしてください</h1>
+                        <label for="id_input" class="form-label">ユーザー名</label>
+                        <input type="text" class="form-control mb-3" id="id_input" v-model.lazy="authorization.id">
+                        <label for="password_input" class="form-label">パスワード</label>
+                        <input type="password" class="form-control mb-3" id="password_input"
+                            v-model.lazy="authorization.password">
+                        <button type="button" class="btn btn-lg btn-primary w-100 mt-3"
+                            v-on:click="onClickLogin">ログイン</button>
+                    </form>
+                </div>
+            </template>
+        </v-app>
     </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vuetify@3.1.5/dist/vuetify.min.js"></script>
     <script src="control.js" charset="UTF-8"></script>
 </body>
 
